01-traefik-vpn-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: minio
    k8s.kuboard.cn/workload: minio
    kubernetes.io/ingress.class: "traefik-internet-vpn"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure, web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-common-headers@kubernetescrd
spec:
  rules:
  - host: minio.internal-devops.development.npool.top
    http:
      paths:
      - path: /
        backend:
          serviceName: minio
          servicePort: 9000
